// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageLoader > renders image and removes spinner after image loads 1`] = `
<div>
  <img
    alt="test"
    class="sc-guDLey cIQHQZ"
    src="#"
  />
</div>
`;

exports[`ImageLoader > renders the spinner when loading 1`] = `
<div>
  <div
    class="sc-beySPh jAEnzm"
  >
    <div
      data-testid="spinner"
    >
      Spinner
    </div>
  </div>
  <img
    alt="test"
    class="sc-guDLey hebdIY"
    src="#"
  />
</div>
`;
